<resources>
    <string name="app_name">小欢喜</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_username">ID / 邮箱 / 手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="forgot_text">忘记密码?</string>
    <string name="create_text">创建账户</string>
    <string name="help_info">现在，您可以输入您的电话号码。注意：请确保您的号码能正常使用，该号码可作为您找回密码的凭证。</string>
    <string name="login_text">好久不见 ヾ( ´∇ ` )o</string>

    <!--  iconfont  -->
    <string name="ic_back">&#xe614;</string>

    <!--  错误提示页 提示语  -->
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">奇怪的错误增加了！\nSorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_restart_app">重启程序</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制到剪切板</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">已复制到剪切板</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>

    <!--  Action Key  -->
    <string name="action_stopBackService">SIMPLE.SERVICE.BACKSERVICE</string>
    <string name="bundleKey_httpTest">bun</string>
    <string name="bundleDataKey_httpTest">data</string>

</resources>
