<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/padding_page"
    tools:context=".ui.activity.RegisterActivity">

    <!--   顶部   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id="@+id/iv_headImg"
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 图片原大小 -->
                <com.diomun.learn.javademo.ui.customview.RoundImageView
                    android:id="@+id/id_qiqiu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/chubbycat_1" />

                <!-- 设定大小 -->
                <com.diomun.learn.javademo.ui.customview.RoundImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/chubbycat_1" />

                <!-- 设定圆角 -->
                <com.diomun.learn.javademo.ui.customview.RoundImageView
                    android:id="@+id/id_meinv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/chubbycat_1"
                    app:borderRadius="20dp"
                    app:type="round" />

                <com.diomun.learn.javademo.ui.customview.RoundImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/chubbycat_1"
                    app:borderRadius="40dp"
                    app:type="round" />

                <com.diomun.learn.javademo.ui.customview.RoundImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/chubbycat_1"
                    app:borderRadius="60dp"
                    app:type="round" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--   文字框和登录按钮   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <!--    登录名框    -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/et_top"
            android:hint="@string/hint_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

        <!--    密码框    -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/et_bottom"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

        <!--    登录按钮    -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/btn_ellipse"
            android:elevation="0dp"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
